--- a/Tema00.ipynb
+++ b/Tema00.ipynb
@@ -62,13 +62,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UYYGH8a2PdmT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UYYGH8a2PdmT",
+        "outputId": "8b856767-bc07-496d-b923-1042f0077c47"
       },
       "source": [
-        "print(\"Hola Mundo\")"
+        "dato1 = 0\n",
+        "dato2 = 0\n",
+        "suma = 0\n",
+        "print(\"Introduce un número\")\n",
+        "dato1 = int(input())\n",
+        "print(\"Introduce otro número\")\n",
+        "dato2 = int(input())\n",
+        "suma = dato1 + dato2\n",
+        "print(\"La suma es: \",suma)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Introduce un número\n",
+            "25\n",
+            "Introduce otro número\n",
+            "50\n",
+            "La suma es:  75\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
